--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,33 @@
 .App {
   text-align: center;
+  margin: 30 auto;
+}
+.card-list{
   display: flex;
-  
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.card__title {
+  text-align: center;
+    margin-bottom: 10px;
+}
+.card{
+  padding: 10px;
+  width: 500px;
+  border: 2px solid red;
+  margin-top: 50px;
+    max-height: 1550px;
+    border: 3px solid rgb(53, 2, 2);
+    border-radius: 7px;
+    box-shadow: 3px 3px rgb(240, 10, 10), -1em 0 .4em rgb(66, 215, 47);
 }
 
-.card{
-  width: 300px;
+.card__image{
+  padding: 20px;
+  width: 400px;
+}
+.card__text{
+  text-align: center;
+  width: 480px;
+  font-size: 15px;
 }
