--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 20px
 }
 .card__title {
   text-align: center;
@@ -19,7 +20,7 @@
     max-height: 1550px;
     border: 3px solid rgb(53, 2, 2);
     border-radius: 7px;
-    box-shadow: 3px 3px rgb(240, 10, 10), -1em 0 .4em rgb(66, 215, 47);
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
 }
 
 .card__image{
@@ -30,4 +31,5 @@
   text-align: center;
   width: 480px;
   font-size: 15px;
+  font-style: italic;
 }
